k8s/apps/vod-arr/cleanuparr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: cleaner
    app.kubernetes.io/name: cleanuparr
    app.kubernetes.io/part-of: cleanuparr
    app.kubernetes.io/version: 2.10.5
  name: cleanuparr
spec:
  ports:
    - name: http
      port: 11011
      protocol: TCP
      targetPort: http
  selector:
      app.kubernetes.io/component: cleaner
      app.kubernetes.io/name: cleanuparr
      app.kubernetes.io/part-of: cleanuparr
  type: ClusterIP
