k8s/apps/vod-arr/cleanuparr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    item.homer.rajsingh.info/name: "Cleanuparr"
    item.homer.rajsingh.info/subtitle: "Download queue janitor"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/npm/@loganmarchione/homelab-svg-assets@latest/assets/cleanuparr.svg"
    item.homer.rajsingh.info/tag: "local"
    item.homer.rajsingh.info/tagstyle: "is-success"
    item.homer.rajsingh.info/order: "45"
    service.homer.rajsingh.info/name: "Multimedia"
    service.homer.rajsingh.info/icon: "fa fa-tv"
    service.homer.rajsingh.info/order: "20"
  labels:
    homer.rajsingh.info/enabled: "true"
  name: cleanuparr
spec:
  ingressClassName: private
  rules:
    - host: cleanuparr.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: cleanuparr
                port:
                  number: 11011
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - cleanuparr.ankhmorpork.thaum.xyz
      secretName: cleanuparr-ankhmorpork-thaum-xyz-tls
